# sui-clippy

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
book/: .gitignore  README.md  book.toml
book/src/: README.md  SUMMARY.md  configuration.md  continuous_integration.md  github_code_scanning.md  installation.md  lints.md  lints_generated.md  lsp.md  usage.md
book/src/lints/: index.html  script.js  style.css
crates/declare_sui_clippy_lint/: Cargo.toml
crates/declare_sui_clippy_lint/src/: lib.rs
crates/sui-clippy/: Cargo.toml
crates/sui-clippy-docgen/: Cargo.toml
crates/sui-clippy-docgen/src/: main.rs
crates/sui-clippy-lsp/: Cargo.toml
crates/sui-clippy-lsp/src/: main.rs
crates/sui-clippy/src/: cli.rs  lib.rs  main.rs  output_format.rs  run.rs
crates/sui-clippy/tests/: cli_list.rs  cli_workspace.rs  sarif_output.rs  typed_cli.rs
crates/sui_clippy_config/: Cargo.toml
crates/sui_clippy_config/src/: lib.rs
crates/sui_clippy_lints/: Cargo.toml
crates/sui_clippy_lints/src/: effective_level.rs  lib.rs  lint_engine.rs  pass.rs  typed.rs  workspace.rs
crates/sui_clippy_lints/src/lints/: bare_abort.rs  clock_timestamp.rs  dynamic_field_access.rs  empty_public_entry.rs  mod.rs  public_fun_transfer.rs  test_only_in_sources.rs  todo_comment.rs  tx_context_sender.rs
crates/sui_clippy_lints/src/manifest/: engine.rs  fix.rs  git_dep_unpinned.rs  missing_move_edition.rs  mod.rs  wildcard_git_ref.rs
crates/sui_clippy_lints/tests/: fix_edition.rs  manifest_smoke.rs  move_compiler_probe.rs  smoke.rs
crates/sui_clippy_lints/tests/fixtures/bad_manifest/: Move.toml
crates/sui_clippy_lints/tests/fixtures/bad_manifest/sources/: stub.move
crates/sui_clippy_lints/tests/fixtures/move_workspace/: Move.toml
crates/sui_clippy_lints/tests/fixtures/move_workspace/pkg_a/: Move.toml
crates/sui_clippy_lints/tests/fixtures/move_workspace/pkg_a/sources/: a.move
crates/sui_clippy_lints/tests/fixtures/move_workspace/pkg_b/: Move.toml
crates/sui_clippy_lints/tests/fixtures/move_workspace/pkg_b/sources/: b.move
crates/sui_clippy_lints/tests/fixtures/pkg/: Move.toml
crates/sui_clippy_lints/tests/fixtures/pkg/sources/: demo.move
crates/sui_clippy_utils/: Cargo.toml
crates/sui_clippy_utils/src/: diagnostic.rs  lib.rs  sarif.rs  source_file.rs
