[workspace]
resolver = "2"
members = [
    "crates/sui-clippy",
    "crates/sui-clippy-docgen",
    "crates/sui-clippy-lsp",
    "crates/sui_clippy_config",
    "crates/sui_clippy_utils",
    "crates/sui_clippy_lints",
    "crates/declare_sui_clippy_lint",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hoh/sui-clippy"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
lsp-server = "0.7"
lsp-types = "0.97"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.8"
url = "2"
walkdir = "2"

declare_sui_clippy_lint = { path = "crates/declare_sui_clippy_lint" }
sui_clippy_config = { path = "crates/sui_clippy_config" }
sui_clippy_lints = { path = "crates/sui_clippy_lints" }
sui_clippy_utils = { path = "crates/sui_clippy_utils" }
