[package]
name = "sui_clippy_lints"
version = "0.4.0"
edition.workspace = true
license.workspace = true
description = "Lint implementations for sui-clippy"

[features]
default = []
move_compiler = ["dep:move-compiler"]

[dependencies]
anyhow.workspace = true
declare_sui_clippy_lint.workspace = true
move-compiler = { git = "https://github.com/MystenLabs/sui.git", rev = "9424262e62261e6591fa34982e2f400304126c9c", package = "move-compiler", optional = true, default-features = false }
regex.workspace = true
sui_clippy_config.workspace = true
sui_clippy_utils.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("move_compiler"))'] }
