[package]
name = "sui_clippy_utils"
version = "0.4.0"
edition.workspace = true
license.workspace = true
description = "Shared diagnostics and source helpers for sui-clippy"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
